docs: add tips